kubernetes/apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  annotations:
    secrets.reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
