kubernetes/apps/linkding/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`linkding.home.lab`)
      services:
        - kind: Service
          name: linkding
          port: 9090
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: linkding-tls
